No need to make each 'ConEmu' hyperlink

--- a/en/Acknowledgement.html
+++ b/en/Acknowledgement.html
@@ -8,7 +8,7 @@ redirect_from: /ru/Acknowledgement.html
 <i>ConEmu and proof of usefulness</i>
 -->
 <p>When anyone dev on Windows or use the console in any other way, you need reliable environment wich will help you to do your job faster. </p>
-<p><a href="ConEmu.html">ConEmu</a> is a portable, handy, smart, reliable and fast terminal, full of features which are traditionally available to MacOS and Unix users. </p>
+<p>ConEmu is a portable, handy, smart, reliable and fast terminal, full of features which are traditionally available to MacOS and Unix users. </p>
 <p>ConEmu gives you full control over console. User may do almost anything via <a href="SettingsHotkeys.html">keyboard</a>, <a href="UsingMouse.html">mouse</a>, <a href="TabletPC.html">touchscreen</a> or <a href="GuiMacro.html">GuiMacro</a>. For example: resizing window, quake-style activation, copying and pasting text, tabs and splits navigation, scrolling console, fast access to your favourite shells and much more... </p>
 <p>Large amount of <a href="Settings.html">options</a> let you set up the terminal of your dream. </p>
 
