--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -204,7 +204,7 @@ Following is <strong>one-line</strong> command, splitted for clearness. </p>
 		<td style="border: 1px solid #ccc; padding: 5px;"> Starts ConEmu in ‘inside’ mode (act as child window of parent process) </td>
 	</tr>
 	<tr><td style="border: 1px solid #ccc; padding: 5px;"> /demote </td>
-		<td style="border: 1px solid #ccc; padding: 5px;"> Run command de-elevated, using Task Sheduler. May be useful in Vista and higher with UAC enabled. Example: <a href="ConEmu.html">ConEmu</a>.exe /demote /cmd powershell.exe </td>
+		<td style="border: 1px solid #ccc; padding: 5px;"> Run command de-elevated, using Task Sheduler. May be useful in Vista and higher with UAC enabled. Example: ConEmu.exe /demote /cmd powershell.exe </td>
 	</tr>
 	<tr><td style="border: 1px solid #ccc; padding: 5px;"> /resetdefault </td>
 		<td style="border: 1px solid #ccc; padding: 5px;"> Same as /reset <strong>and</strong> don&#x27;t show <a href="SettingsFast.html">fast configuration</a> dialog. </td>
