--- a/en/ConEmuClink.html
+++ b/en/ConEmuClink.html
@@ -13,7 +13,7 @@ redirect_from: /ru/ConEmuClink.html
 <li>Please note, clink archive contains subfolder. Files <code>clink_dll_x86.dll</code>, <code>clink_dll_x64.dll</code> (and others) must be located in <code>%ConEmuBaseDir%\clink</code>. </li>
 <li>Turn on checkbox ‘Use Clink in prompt’ on ‘Features’ page, save settings and restart ConEmu. </li></ul><p>OK, now bash style completion will be available in <code>cmd.exe</code> new session. </p>
 <p>Note. Clink will be called in shell prompt (cmd) if <code>ConEmuHk.dll</code> or <code>ConEmuHk64.dll</code> is loaded into shell process. This will be done for ‘root’ processes (that you specify when creating console) or when ‘Inject ConEmuHk’ option is checked on ‘Features’ page (this is required, if you start second-level cmd from root process, e.g. <code>cmd /c cmd /k …</code>). </p>
-<p>Note. If you do not want to store clink in the <a href="ConEmu.html">ConEmu</a>&#x27;s subfolder, you may install it standalone using <code>clink_setup.exe</code>. Actually, option ‘Use Clink in prompt’ is not required if clink was set up using its installer. </p>
+<p>Note. If you do not want to store clink in the ConEmu&#x27;s subfolder, you may install it standalone using <code>clink_setup.exe</code>. Actually, option ‘Use Clink in prompt’ is not required if clink was set up using its installer. </p>
 <p>Please refer to <a href="https://github.com/mridgers/clink" rel="nofollow">https://github.com/mridgers/clink</a> for further information and bugreports. </p>
 
 <!-- Content ends -->
