--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -141,7 +141,7 @@ title: ConEmu FAQ - Frequently Asked Questions
 <p>A. This module provides communication between Far Manager and ConEmu. <ul><li>It is required for certain extended features (tabs, Drag-and-Drop, progress). </li>
 <li>It is required for TrueColor in Far 3.x. </li>
 <li>It is required for certain other plugins (e.g. FarHints). </li>
-<li>It displays the hidden real console (with FAR), should <a href="ConEmu.html">ConEmu</a> crash. </li>
+<li>It displays the hidden real console (with FAR), should ConEmu crash. </li>
 <li>After a console detach (Ctrl-Alt-Tab), it spawns a new ConEmu for the new console. </li>
 <li>It is required to retrieve the long output buffer for console applications. </li>
 <li>It is required for proper mouse function when using «far /w» (System\WindowMode=1). </li></ul></p>
