--- a/en/ConEmuTerms.html
+++ b/en/ConEmuTerms.html
@@ -5,16 +5,16 @@ redirect_from: /ru/ConEmuTerms.html
 <!-- Content starts -->
 
 <h3 id="h0"><a name="RealConsole"></a>RealConsole<a href="#RealConsole" class="section_anchor"></a></h3>
-<p>As is, it is a real console window. It always exists, but <a href="ConEmu.html">ConEmu</a> hide it. You may reveal the RealConsole window by depressing Ctrl-Win-Alt-Space, or selecting item &#x27;Real console&#x27; from the <a href="SystemMenu.html">SystemMenu</a>. </p>
+<p>As is, it is a real console window. It always exists, but ConEmu hide it. You may reveal the RealConsole window by depressing Ctrl-Win-Alt-Space, or selecting item &#x27;Real console&#x27; from the <a href="SystemMenu.html">SystemMenu</a>. </p>
 
 <h3><a name="VirtualConsole"></a>VirtualConsole<a href="#VirtualConsole" class="section_anchor"></a></h3>
-<p>It is a part of the <a href="ConEmu.html">ConEmu</a> window, where <a href="ConEmu.html">ConEmu</a> draws contents of the <a href="ConEmuTerms.html#RealConsole">RealConsole</a>. </p>
+<p>It is a part of the ConEmu window, where ConEmu draws contents of the <a href="ConEmuTerms.html#RealConsole">RealConsole</a>. </p>
 
 <h3><a name=""></a><a href="SystemMenu.html">SystemMenu</a></h3>
-<p>Pop up it by depressing Win-Alt-Space or right mouse clicking on the <a href="ConEmu.html">ConEmu</a> window caption. </p>
+<p>Pop up it by depressing Win-Alt-Space or right mouse clicking on the ConEmu window caption. </p>
 
 <h3><a name="TabMenu"></a>TabMenu<a href="#TabMenu" class="section_anchor"></a></h3>
-<p>When Tabs are shown in the <a href="ConEmu.html">ConEmu</a> window, you may pop up menu for exact tab by right mouse clicking on this tab. This menu looks like <a href="SystemMenu.html">SystemMenu</a>, but does not have some window-related items. </p>
+<p>When Tabs are shown in the ConEmu window, you may pop up menu for exact tab by right mouse clicking on this tab. This menu looks like <a href="SystemMenu.html">SystemMenu</a>, but does not have some window-related items. </p>
 
 <h3><a name="TSA"></a>TSA<a href="#TSA" class="section_anchor"></a></h3>
 <p>Taskbar status area. It&#x27;s a part of Windows taskbar next to the clock. </p>
