--- a/en/CrashDump.html
+++ b/en/CrashDump.html
@@ -4,12 +4,12 @@ redirect_from: /ru/CrashDump.html
 
 <!-- Content starts -->
 
-<p>#Summary Reporting <a href="ConEmu.html">ConEmu</a> crashes </p>
-<p><a href="ConEmu.html">ConEmu</a> is stable enough. </p>
+<p>#Summary Reporting ConEmu crashes </p>
+<p>ConEmu is stable enough. </p>
 <p><strong>Note!</strong> I often have reports related to several <a href="MicrosoftBugs.html">MicrosoftBugs</a>. If you see the crash, please read <a href="MicrosoftBugs.html">wiki</a> and make sure <a href="ConEmuHk.html">Inject ConEmuHk</a> feature is enabled! </p>
 <p>Well, if any unknown crash was occured in <code>ConEmu</code> or <code>ConEmuC</code> processes, <a href="MemoryDump.html">MemoryDump</a> may greatly help to locate and fix the problem. </p>
 <p>Crashes in <code>ConEmu[64].exe</code> and <code>ConEmuC[64].exe</code> are handled automatically and application suggests to user (message box) to create <a href="MemoryDump.html">MemoryDump</a> (full or mini). Due to limitation of googlecode attachments, please upload dumps to <a href="DropBox.html">DropBox</a> or any other hosting and post the link to issues or via email. </p>
-<p><a href="ConEmu.html">ConEmu</a> does not handle crashes (exceptions actually) in the running console applications. That is because to minimize intrusion to running application. </p>
-<p>If you need to create dump manually (of any <a href="ConEmu.html">ConEmu</a>&#x27;s processes or console application) please read that <a href="MemoryDump.html">wiki</a>. </p>
+<p>ConEmu does not handle crashes (exceptions actually) in the running console applications. That is because to minimize intrusion to running application. </p>
+<p>If you need to create dump manually (of any ConEmu&#x27;s processes or console application) please read that <a href="MemoryDump.html">wiki</a>. </p>
 
 <!-- Content ends -->
