--- a/en/CygwinCurDir.html
+++ b/en/CygwinCurDir.html
@@ -7,7 +7,7 @@ redirect_from: /ru/CygwinCurDir.html
 <!--
 <i>cygwin, mingw, ConEmu and current shell directory</i>
 -->
-<p><a href="ConEmu.html">ConEmu</a> may utilize shell&#x27;s current directory. </p>
+<p>ConEmu may utilize shell&#x27;s current directory. </p>
 <p><a href="ShellWorkDir.html">ShellWorkDir</a> </p>
 
 <!-- Content ends -->
