--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -24,7 +24,7 @@ redirect_from: /ru/Downloads.html
 <li><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a> </li></ul>
 
 <h2><a name="Release_archives"></a>Release archives<a href="#Release_archives" class="section_anchor"></a></h2>
-<p>Searching for some old (exact) <a href="ConEmu.html">ConEmu</a> build? All builds are available here: </p>
+<p>Searching for some old (exact) ConEmu build? All builds are available here: </p>
 <ul><li><a href="http://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow">Release archives (sourceforge)</a> </li>
 <li><a href="http://www.oldfoss.com/ConEmu.html" rel="nofollow">Release archives (oldfoss)</a> </li></ul>
 
