--- a/en/FaqTabVsTitle.html
+++ b/en/FaqTabVsTitle.html
@@ -8,7 +8,7 @@ redirect_from: /ru/FaqTabVsTitle.html
 <i>Console title vs tab label</i>
 -->
 <p>There are two things </p>
-<p>a) Console title. Well, you can set it from <a href="ConEmu.html">ConEmu</a> task, but that title will be overrided/changed in the most cases by your shell. </p>
+<p>a) Console title. Well, you can set it from ConEmu task, but that title will be overrided/changed in the most cases by your shell. </p>
 <blockquote>title &quot;Your cool tab&quot; &amp; cmd 
 </blockquote><p>b) Tab title. By default it shows console title with console number as prefix. It can be configured by templates on the <a href="SettingsTabBar.html">SettingsTabBar</a> page. Also, it can be renamed by user (Apps+R or tab menu). And of course it can be specified from your task. Read wiki <a href="NewConsole.html">NewConsole</a> switch <code>t</code> </p>
 <blockquote>cmd -new_console:t:&quot;Your cool tab&quot; 
