--- a/en/FileLineDetector.html
+++ b/en/FileLineDetector.html
@@ -5,19 +5,19 @@ redirect_from: /ru/FileLineDetector.html
 <!-- Content starts -->
 
 <h1 id="h0"><a name="The_detector"></a>The detector<a href="#The_detector" class="section_anchor"></a></h1>
-<p><a href="ConEmu.html">ConEmu</a> has ability to highlight hyperlinks, files and compiler errors (file+line_number). Just hover mouse with ‘Ctrl’ pressed. May be configured on <a href="SettingsHighlight.html">Highlight</a> settings page. </p>
+<p>ConEmu has ability to highlight hyperlinks, files and compiler errors (file+line_number). Just hover mouse with ‘Ctrl’ pressed. May be configured on <a href="SettingsHighlight.html">Highlight</a> settings page. </p>
 <p><img src="../img/ConEmuFileLineHL.png" title="ConEmu FileLineDetector"> </p>
 
 <h2><a name="Compiler_errors"></a>Compiler errors<a href="#Compiler_errors" class="section_anchor"></a></h2>
 <p>Examples: </p>
 <ul><li>macro.cpp(1820) : error C4716 </li>
 <li>NewClass.ps1:35 ... </li>
-<li>abc.py (3): ... </li></ul><p><strong>Note!</strong> File will not be highlighted if <a href="ConEmu.html">ConEmu</a> can&#x27;t find it in the <a href="ShellWorkDir.html">shell&#x27;s current directory</a>. </p>
+<li>abc.py (3): ... </li></ul><p><strong>Note!</strong> File will not be highlighted if ConEmu can&#x27;t find it in the <a href="ShellWorkDir.html">shell&#x27;s current directory</a>. </p>
 <p>Action: File will be opened in the <a href="SettingsHighlight.html">specified editor</a> on the proper line if possible. </p>
 
 <h2><a name="Files"></a>Files<a href="#Files" class="section_anchor"></a></h2>
 <p>File names or full paths produced from ‘dir’, ‘ls’, ‘git status’, ‘git diff’ and so on. </p>
-<p><strong>Note!</strong> File will not be highlighted if <a href="ConEmu.html">ConEmu</a> can&#x27;t find it in the <a href="ShellWorkDir.html">shell&#x27;s current directory</a>. </p>
+<p><strong>Note!</strong> File will not be highlighted if ConEmu can&#x27;t find it in the <a href="ShellWorkDir.html">shell&#x27;s current directory</a>. </p>
 <p>Action: will be opened in the default program (<a href="http://msdn.microsoft.com/en-us/library/windows/desktop/bb762153(v=vs.85).aspx" rel="nofollow">ShellExecute</a>). </p>
 
 <h2><a name="Hyperlinks"></a>Hyperlinks<a href="#Hyperlinks" class="section_anchor"></a></h2>
