--- a/en/GlobalHotKeys.html
+++ b/en/GlobalHotKeys.html
@@ -4,7 +4,7 @@ redirect_from: /ru/GlobalHotKeys.html
 
 <!-- Content starts -->
 
-<p><a href="ConEmu.html">ConEmu</a> ‘Keys &amp; Macro’ page contains few hotkeys marked as ‘Global’. Thought, most useful is ‘Minimize/Restore’. These hotkeys are registered globally in system via <a href="http://msdn.microsoft.com/en-us/library/windows/desktop/ms646309(v=vs.85).aspx" rel="nofollow">RegisterHotKey</a> and are available even <a href="ConEmu.html">ConEmu</a> has no focus. </p>
+<p>ConEmu ‘Keys &amp; Macro’ page contains few hotkeys marked as ‘Global’. Thought, most useful is ‘Minimize/Restore’. These hotkeys are registered globally in system via <a href="http://msdn.microsoft.com/en-us/library/windows/desktop/ms646309(v=vs.85).aspx" rel="nofollow">RegisterHotKey</a> and are available even ConEmu has no focus. </p>
 <p>Because these hotkeys are processed by Windows, some limitations applied: </p>
 <ul><li>You can&#x27;t use ‘Apps’ as modifier. </li>
 <li>Left and Right modifiers are indifferent. </li>
