--- a/en/GuiMacro.html
+++ b/en/GuiMacro.html
@@ -513,7 +513,7 @@ WindowMode([\&quot;&lt;Mode&gt;\&quot;])
 </div>
 
 <h2><a name="SetOption"></a>SetOption<a href="#SetOption" class="section_anchor"></a></h2>
-<p>You may change some (or most) of <a href="ConEmu.html">ConEmu</a> settings using <code>SetOption</code> macro function. </p>
+<p>You may change some (or most) of ConEmu settings using <code>SetOption</code> macro function. </p>
 <p>It may be used <strong>by name</strong> for several options, for example </p>
 <pre class="prettyprint">SetOption(&quot;FarGotoEditorPath&quot;,&quot;far.exe /e%1:%2 \&quot;%3\&quot;&quot;)</pre>
 <p>Or <strong>by CheckBox/RadioButton ID</strong>. Of course you must know that number-ID. Look up the control by its label in the <a href="https://github.com/Maximus5/ConEmu/blob/master/src/ConEmu/ConEmu.rc" rel="nofollow">ConEmu.rc</a> (don&#x27;t forget about possible ‘<code>&amp;</code>’) and then look up the exact number-ID by its string-ID in the <a href="https://github.com/Maximus5/ConEmu/blob/master/src/ConEmu/resource.h" rel="nofollow">resource.h</a>. </p>
