--- a/en/LaunchNewTab.html
+++ b/en/LaunchNewTab.html
@@ -19,8 +19,8 @@ redirect_from: /ru/LaunchNewTab.html
 </p>
 
 <h2><a name=""></a><a href="ConEmuArgs.html">Using ConEmu switches</a></h2>
-<p>When you run something from <code>Win+R</code> or shortcut from your Desktop, you may use <code>-cmd</code> or <code>-cmdlist</code> to run your application. Remember, <code>-cmd</code> or <code>-cmdlist</code> will be the last <a href="ConEmu.html">ConEmu</a>&#x27;s GUI interpreted switch. The rest of command line will be used to start your application. Read more in the <a href="ConEmuArgs.html">wiki</a>. Example: </p>
-<blockquote><a href="ConEmu.html">ConEmu</a> -reuse -dir &quot;c:\projects&quot; -cmd &quot;set PATH=C:\MinGW\bin;%PATH%&quot; &amp; chcp 65001 &amp; sh -l -i 
+<p>When you run something from <code>Win+R</code> or shortcut from your Desktop, you may use <code>-cmd</code> or <code>-cmdlist</code> to run your application. Remember, <code>-cmd</code> or <code>-cmdlist</code> will be the last ConEmu&#x27;s GUI interpreted switch. The rest of command line will be used to start your application. Read more in the <a href="ConEmuArgs.html">wiki</a>. Example: </p>
+<blockquote>ConEmu -reuse -dir &quot;c:\projects&quot; -cmd &quot;set PATH=C:\MinGW\bin;%PATH%&quot; &amp; chcp 65001 &amp; sh -l -i 
 </blockquote>
 
 <h2><a name="Create_new_console_dialog"></a>Create new console dialog<a href="#Create_new_console_dialog" class="section_anchor"></a></h2>
