--- a/en/LogFiles.html
+++ b/en/LogFiles.html
@@ -9,14 +9,14 @@ redirect_from: /ru/LogFiles.html
 -->
 
 <h3 id="h0"><a name="Why_they_are_needed"></a>Why they are needed<a href="#Why_they_are_needed" class="section_anchor"></a></h3>
-<p>When user reports a problem, frequently, developer needs more information than user may tell. <a href="ConEmu.html">ConEmu</a> may write internal information in text form into log files. </p>
+<p>When user reports a problem, frequently, developer needs more information than user may tell. ConEmu may write internal information in text form into log files. </p>
 
 <h3><a name="How_to_start_logging"></a>How to start logging<a href="#How_to_start_logging" class="section_anchor"></a></h3>
-<p>Run <code>ConEmu.exe</code> or <code>ConEmu64.exe</code> (whatever you are using) with special switch <code>/log</code>. How to do that? Simpliest way is to press <strong>Win+R</strong>, type (or browse) in edit field full path to <code>ConEmu.exe</code> or <code>ConEmu64.exe</code> and append <code>/log</code> switch. There are also <code>/log2</code>, <code>/log3</code> and <code>/log4</code> alternatives. Larger digit - more information will be written - <a href="ConEmu.html">ConEmu</a> will run slower. </p>
+<p>Run <code>ConEmu.exe</code> or <code>ConEmu64.exe</code> (whatever you are using) with special switch <code>/log</code>. How to do that? Simpliest way is to press <strong>Win+R</strong>, type (or browse) in edit field full path to <code>ConEmu.exe</code> or <code>ConEmu64.exe</code> and append <code>/log</code> switch. There are also <code>/log2</code>, <code>/log3</code> and <code>/log4</code> alternatives. Larger digit - more information will be written - ConEmu will run slower. </p>
 
 <h3><a name="Where_log_files_are_created"></a>Where log files are created<a href="#Where_log_files_are_created" class="section_anchor"></a></h3>
 <p>This depends of when program folder is write-allowed. For example, running as normal user any program can&#x27;t write to <code>C:\Program Files</code>. </p>
-<p><strong>If program folder is locked</strong>, <a href="ConEmu.html">ConEmu</a> will create on your desktop new folder named <strong>ConEmuLogs</strong> and write information to <code>ConEmu*.log</code> files there. </p>
-<p><strong>If program folder is write-allowed</strong>, <a href="ConEmu.html">ConEmu</a> will create <code>ConEmu*.log</code> files near to executable file. Note, that there are <code>ConEmuC.exe</code> and <code>ConEmuC64.exe</code> in the <code>ConEmu</code> subfolder. </p>
+<p><strong>If program folder is locked</strong>, ConEmu will create on your desktop new folder named <strong>ConEmuLogs</strong> and write information to <code>ConEmu*.log</code> files there. </p>
+<p><strong>If program folder is write-allowed</strong>, ConEmu will create <code>ConEmu*.log</code> files near to executable file. Note, that there are <code>ConEmuC.exe</code> and <code>ConEmuC64.exe</code> in the <code>ConEmu</code> subfolder. </p>
 
 <!-- Content ends -->
