--- a/en/MemoryDump.html
+++ b/en/MemoryDump.html
@@ -17,7 +17,7 @@ redirect_from: /ru/MemoryDump.html
 <p>Just locate process in the list, right click on it and choose ‘Create dump’ -&gt; Mini or Full. </p>
 
 <h2><a name="ConEmu_System_menu"></a>ConEmu System menu<a href="#ConEmu_System_menu" class="section_anchor"></a></h2>
-<p><a href="ConEmu.html">ConEmu</a> GUI offers easy creation of ‘<a href="ActiveProcess.html">ActiveProcess</a> memory dump’. Just choose menu item from <a href="SystemMenu.html">SystemMenu</a> -&gt; Debug. </p>
+<p>ConEmu GUI offers easy creation of ‘<a href="ActiveProcess.html">ActiveProcess</a> memory dump’. Just choose menu item from <a href="SystemMenu.html">SystemMenu</a> -&gt; Debug. </p>
 <p><strong>Note</strong> ‘Active Process’ is <strong>console</strong> process or <a href="ChildGui.html">ChildGui</a> application, but not a <code>ConEmu[64].exe</code> or <code>ConEmuC[64].exe</code>. </p>
 
 <h2><a name="Using_ConEmuC_command_line"></a>Using ConEmuC command line<a href="#Using_ConEmuC_command_line" class="section_anchor"></a></h2>
