--- a/en/PromptAtTheBottom.html
+++ b/en/PromptAtTheBottom.html
@@ -4,7 +4,7 @@ redirect_from: /ru/PromptAtTheBottom.html
 
 <!-- Content starts -->
 
-<p>Do you want to get your cmd.exe prompt bottom aligned? On <a href="ConEmu.html">ConEmu</a> startup and after &quot;cls&quot;? </p>
+<p>Do you want to get your cmd.exe prompt bottom aligned? On ConEmu startup and after &quot;cls&quot;? </p>
 
 <h2 id="h0"><a name="Far_Manager"></a>Far Manager<a href="#Far_Manager" class="section_anchor"></a></h2>
 <p>Actually, I can&#x27;t understand why anyone use cmd as shell but not a <a href="FarManager.html">FarManager</a>. It&#x27;s a fast handy and powerfull combination of: </p>
