--- a/en/SettingsAppearance.html
+++ b/en/SettingsAppearance.html
@@ -13,17 +13,17 @@ redirect_from: /ru/SettingsAppearance.html
 <p><img src="../img/Settings-Appearance.png" title="ConEmu Settings: Appearance"> </p>
 
 <h2><a name="Generic"></a>Generic<a href="#Generic" class="section_anchor"></a></h2>
-<p><strong>Single instance mode (use existing window instead of running new instance)</strong> Use one <a href="ConEmu.html">ConEmu</a> window when starting new console from shortcut or somewhere May be disabled by ‘/nosingle’ or forced by ‘/single’ switches </p>
-<p><strong>Multiple consoles in one <a href="ConEmu.html">ConEmu</a> window</strong> Turn on MultiConsole (several consoles in one <a href="ConEmu.html">ConEmu</a>) <a href="ConEmu.html">ConEmu</a> restart required </p>
+<p><strong>Single instance mode (use existing window instead of running new instance)</strong> Use one ConEmu window when starting new console from shortcut or somewhere May be disabled by ‘/nosingle’ or forced by ‘/single’ switches </p>
+<p><strong>Multiple consoles in one ConEmu window</strong> Turn on MultiConsole (several consoles in one ConEmu) ConEmu restart required </p>
 <p><strong>Show buttons (toolbar) in tab bar</strong>  </p>
 <p><strong>Create confirmation ( Win+W, toolbar [+] )</strong> Confirm new console creation. You may change cmd line for it, or turn on &quot;Run as...&quot; feature. Even if unchecked, You may hold &quot;Shift&quot; to display dialog. </p>
-<p><strong>Close confirmation</strong> Show confirmation before closing tabs or <a href="ConEmu.html">ConEmu</a> window </p>
+<p><strong>Close confirmation</strong> Show confirmation before closing tabs or ConEmu window </p>
 <p><strong>Far Editor/Viewer</strong>  </p>
 
 <h2><a name="Appearance"></a>Appearance<a href="#Appearance" class="section_anchor"></a></h2>
 <p><strong>Enhance progressbars and scrollbars</strong> Enhance appearance of progressbars and scrollbars </p>
 <p><strong>Desktop mode</strong> Act as a part of Windows Desktop </p>
-<p><strong>Always on top</strong> Places the <a href="ConEmu.html">ConEmu</a> window above all non-topmost windows. The window maintains its topmost position even when it is deactivated </p>
+<p><strong>Always on top</strong> Places the ConEmu window above all non-topmost windows. The window maintains its topmost position even when it is deactivated </p>
 <p><strong>Show balloon help tooltips</strong> Don&#x27;t like tooltips in settings dialog? Disable this feature. </p>
 
 <h2><a name="Scrollbar"></a>Scrollbar<a href="#Scrollbar" class="section_anchor"></a></h2>
@@ -36,11 +36,11 @@ redirect_from: /ru/SettingsAppearance.html
 <p><strong>Hide caption when maximized</strong> Hide main window caption, when maximized (Alt-F9) </p>
 <p><strong>Hide caption always</strong> Remove window border and caption. Only console, tabs and status bar will be shown. </p>
 <p><strong>Show tabs in caption</strong>  </p>
-<p><strong>Frame width</strong> While caption and frame are hidden, <a href="ConEmu.html">ConEmu</a> may keep small part of frame (in pixels) around console part. Default is 1 pixel. </p>
+<p><strong>Frame width</strong> While caption and frame are hidden, ConEmu may keep small part of frame (in pixels) around console part. Default is 1 pixel. </p>
 <p><strong>Appear delay</strong> Delay in milliseconds, for a Frame appearance </p>
 <p><strong>Disappear</strong> Delay in milliseconds, for a Frame disappearance </p>
 <p><strong>Always show numbers [n/m]</strong> Show [ActiveCon/TotalCon] in window caption </p>
-<p><strong>Hide caption of child GUI windows started in <a href="ConEmu.html">ConEmu</a></strong>  </p>
+<p><strong>Hide caption of child GUI windows started in ConEmu</strong>  </p>
 
 <h2><a name="Quake_style"></a>Quake style<a href="#Quake_style" class="section_anchor"></a></h2>
 <p><strong>Quake style slide down</strong> Slide console window from the top of the screen like gaming consoles Choose desired hotkey for ‘Minimize/Restore’ action on ‘Keys &amp; Macro’ page </p>
