--- a/en/SettingsColors.html
+++ b/en/SettingsColors.html
@@ -63,9 +63,9 @@ redirect_from: /ru/SettingsColors.html
 <p><strong>Delete...</strong>  </p>
 
 <h2><a name="Graphic_enhancement"></a>Graphic enhancement<a href="#Graphic_enhancement" class="section_anchor"></a></h2>
-<p><strong>Fade when inactive</strong> When <a href="ConEmu.html">ConEmu</a> looses focus, its contents may be faded. You may specify most bright color. </p>
-<p><strong>Low</strong> When <a href="ConEmu.html">ConEmu</a> looses focus, its contents may be faded. You may specify here &quot;low shift&quot; (wich makes dark colors lighter). </p>
-<p><strong>High</strong> When <a href="ConEmu.html">ConEmu</a> looses focus, its contents may be faded. You may specify here &quot;high shift&quot; (wich makes light colors darker). </p>
+<p><strong>Fade when inactive</strong> When ConEmu looses focus, its contents may be faded. You may specify most bright color. </p>
+<p><strong>Low</strong> When ConEmu looses focus, its contents may be faded. You may specify here &quot;low shift&quot; (wich makes dark colors lighter). </p>
+<p><strong>High</strong> When ConEmu looses focus, its contents may be faded. You may specify here &quot;high shift&quot; (wich makes light colors darker). </p>
 <p><strong>TrueMod (24bit color) support</strong> Colorer truemod support </p>
 <p>You may choose one of predefined color schemes. Each scheme customize 32 colors (16+16) and extend foreground options. </p>
 
