--- a/en/SettingsComspec.html
+++ b/en/SettingsComspec.html
@@ -16,13 +16,13 @@ redirect_from: /ru/SettingsComspec.html
 <ul><li><strong>Auto (tcc - if installed, %ComSpec% - otherwise)</strong> Start tcc - if installed, %ComSpec% - otherwise (used for ‘Create new ‘cmd.exe’ console’) </li>
 <li><strong>%ComSpec% (env.var.)</strong> Use %ComSpec% environment variable (used for ‘Create new ‘cmd.exe’ console’) </li>
 <li><strong>cmd</strong> Use cmd.exe only (used for ‘Create new ‘cmd.exe’ console’) </li>
-<li><strong>Explicit executable (env.var. of <a href="ConEmu.html">ConEmu</a>.exe allowed)</strong> Specified command processor (used for ‘Create new ‘cmd.exe’ console’) </li></ul>
+<li><strong>Explicit executable (env.var. of ConEmu.exe allowed)</strong> Specified command processor (used for ‘Create new ‘cmd.exe’ console’) </li></ul>
 
 <h2><a name="Choose_preferred_command_processor_platform_(bits)"></a>Choose preferred command processor platform (bits)<a href="#Choose_preferred_command_processor_platform_(bits)" class="section_anchor"></a></h2>
 <ul><li><strong>Same as OS</strong> 64bit OS only, (System32 or SysWOW64) - use System32 </li>
-<li><strong>Same as running application</strong> 64bit OS only, (System32 or SysWOW64) - same bits as application (<a href="ConEmu.html">ConEmu</a>, Far Manager, ...) </li>
+<li><strong>Same as running application</strong> 64bit OS only, (System32 or SysWOW64) - same bits as application (ConEmu, Far Manager, ...) </li>
 <li><strong>x32 always</strong> 64bit OS only, (System32 or SysWOW64) - use SysWOW64 </li></ul><p><strong>Test</strong> Show ‘calculated’ ComSpec path </p>
-<p><strong>Set ComSpec environment variable for child processes to selected value</strong> <a href="ConEmu.html">ConEmu</a> may update %ComSpec% variable to selected command processor </p>
+<p><strong>Set ComSpec environment variable for child processes to selected value</strong> ConEmu may update %ComSpec% variable to selected command processor </p>
 <p><strong>Cmd.exe output codepage</strong> Windows command processor (cmd.exe) may cause then output of internal commands to be OEM or Unicode. You may force this selection, or use automatic selection (FAR2 -<code>&gt;</code> Unicode). </p>
 <p><strong>Support UNC paths in cmd.exe (\\server\share\folder)</strong>  </p>
 
@@ -34,11 +34,11 @@ redirect_from: /ru/SettingsComspec.html
 
 <h2><a name="Add_to_%PATH%_environment_variable"></a>Add to %PATH% environment variable<a href="#Add_to_%PATH%_environment_variable" class="section_anchor"></a></h2>
 
-<h2><a name="Automatic_attach_of_cmd_&amp;_Tcc/Le_to_(new_window_will_be_star"></a>Automatic attach of cmd &amp; Tcc/Le to <a href="ConEmu.html">ConEmu</a> (new window will be started if not found)<a href="#Automatic_attach_of_cmd_&amp;_Tcc/Le_to_(new_window_will_be_star" class="section_anchor"></a></h2>
+<h2><a name="Automatic_attach_of_cmd_&amp;_Tcc/Le_to_(new_window_will_be_star"></a>Automatic attach of cmd &amp; Tcc/Le to ConEmu (new window will be started if not found)<a href="#Automatic_attach_of_cmd_&amp;_Tcc/Le_to_(new_window_will_be_star" class="section_anchor"></a></h2>
 <p><strong>[HKEY_CURRENT_USER\Software\Microsoft\Command Processor] Current command stored in registry ‘AutoRun’ (HKLM value is not processed here)</strong>  </p>
-<p><strong>Register <a href="ConEmu.html">ConEmu</a> autorun</strong>  </p>
+<p><strong>Register ConEmu autorun</strong>  </p>
 <p><strong>Unregister</strong>  </p>
 <p><strong>Clear</strong>  </p>
-<p><strong>Force new <a href="ConEmu.html">ConEmu</a> window</strong>  </p>
+<p><strong>Force new ConEmu window</strong>  </p>
 
 <!-- Content ends -->
