--- a/en/SettingsControls.html
+++ b/en/SettingsControls.html
@@ -13,15 +13,15 @@ redirect_from: /ru/SettingsControls.html
 <p><img src="../img/Settings-Controls.png" title="ConEmu Settings: Controls"> </p>
 
 <h2><a name="Mouse_options"></a>Mouse options<a href="#Mouse_options" class="section_anchor"></a></h2>
-<p><strong>Send mouse events to console</strong> Uncheck this to stop sending mouse events to console, mouse will be processed by <a href="ConEmu.html">ConEmu</a> internally (text selection, for example) </p>
+<p><strong>Send mouse events to console</strong> Uncheck this to stop sending mouse events to console, mouse will be processed by ConEmu internally (text selection, for example) </p>
 <p><strong>Skip click on activation</strong> Skip mouse button (left/right/middle) click, while activating window </p>
-<p><strong>Skip in background</strong> Skip mouse move events, while <a href="ConEmu.html">ConEmu</a> is not foreground window </p>
+<p><strong>Skip in background</strong> Skip mouse move events, while ConEmu is not foreground window </p>
 
 <h2><a name="Intercept_keys"></a>Intercept keys<a href="#Intercept_keys" class="section_anchor"></a></h2>
 <p><strong>Install keyboard hooks</strong> Allows interception of Win+Number, Win+Arrows, Alt+Esc, Alt+Tab, etc. </p>
-<p><strong>Win+Tab - switch consoles (Tabs)</strong> Disable Windows 7 Aero switch (Win+Tab) when <a href="ConEmu.html">ConEmu</a> in foreground </p>
+<p><strong>Win+Tab - switch consoles (Tabs)</strong> Disable Windows 7 Aero switch (Win+Tab) when ConEmu in foreground </p>
 <p><strong>Win+Numbers - activate console</strong> Enables switching of tabs (30 consoles) by their numbers (1,2,...,9,10,11,...). ‘Host-key’ is ‘Win’ key, by default. </p>
-<p><strong>Win+Arrows - resize window</strong> Resize <a href="ConEmu.html">ConEmu</a> window with arrow keys </p>
+<p><strong>Win+Arrows - resize window</strong> Resize ConEmu window with arrow keys </p>
 
 <h2><a name="Seize_keys_/_Send_to_console"></a>Seize keys / Send to console<a href="#Seize_keys_/_Send_to_console" class="section_anchor"></a></h2>
 <p><strong>Alt+Tab</strong> When checked, You can use &quot;Alt+Tab&quot; in Far internally. Warning! This blocks ability of switching to another window </p>
