--- a/en/SettingsFar.html
+++ b/en/SettingsFar.html
@@ -14,7 +14,7 @@ redirect_from: /ru/SettingsFar.html
 
 <h2><a name="Shell_style_Drag_and_Drop_(Far_Manager_only)"></a>Shell style Drag and Drop (Far Manager only)<a href="#Shell_style_Drag_and_Drop_(Far_Manager_only)" class="section_anchor"></a></h2>
 <p><strong>LDrag</strong> Allow drag with left mouse button </p>
-<p><strong>Drop &amp; Confirmation</strong> Off - <a href="ConEmu.html">ConEmu</a> will NOT receive external drops On - Drops allowed (Far confirmation dialog) 3rd-state - same as &quot;On&quot;, but w/o confirmation </p>
+<p><strong>Drop &amp; Confirmation</strong> Off - ConEmu will NOT receive external drops On - Drops allowed (Far confirmation dialog) 3rd-state - same as &quot;On&quot;, but w/o confirmation </p>
 <p><strong>Overlay</strong> Create and display overlay transparent snapshoot of files are dragged </p>
 <p><strong>Shell icons</strong> Show icons of dragged iterms </p>
 <p><strong>RDrag</strong> Allow drag with right mouse button </p>
