--- a/en/SettingsFarMacros.html
+++ b/en/SettingsFarMacros.html
@@ -15,8 +15,8 @@ redirect_from: /ru/SettingsFarMacros.html
 <h2><a name="Far_Manager_macros"></a>Far Manager macros<a href="#Far_Manager_macros" class="section_anchor"></a></h2>
 <p><strong>RightClick 4 EMenu</strong> Off - all RClicks passed to console On - EMenu called instead of RClick 3rd-state - Short RClick passed, Long RClick -<code>&gt;</code> EMenu Warning! This may conflict with RDrag </p>
 <p>Far Manager macro for EMenu of file panel selected items Clear field to reset to defaults </p>
-<p><strong>Safe Far close</strong> Try to close Far Manager softly, instead of closing console window, when you close <a href="ConEmu.html">ConEmu</a> window </p>
-<p>Macro for close Far Manager softly, instead of closing console window, when you close <a href="ConEmu.html">ConEmu</a> window Clear field to reset to defaults </p>
+<p><strong>Safe Far close</strong> Try to close Far Manager softly, instead of closing console window, when you close ConEmu window </p>
+<p>Macro for close Far Manager softly, instead of closing console window, when you close ConEmu window Clear field to reset to defaults </p>
 <p><strong>Close tab (Panel, Editor, Viewer)</strong> Macro for close Editor/Viewer/Panels in Far Manager, when you choose ‘Close’ from tab context menu Clear field to reset to defaults </p>
 <p><strong>Save all editors</strong> Macro for saving all opened Far Manager modified editors, when you choose ‘Save all’ from tab context menu Clear field to reset to defaults </p>
 
