--- a/en/SettingsIntegration.html
+++ b/en/SettingsIntegration.html
@@ -27,7 +27,7 @@ redirect_from: /ru/SettingsIntegration.html
 <p>What you will see in the Explorer popup menu. You can use <code>&amp;</code> sign to set hotkey for the menu item. For example, register <code>ConEmu &amp;Here</code> and you can press Alt+H to run it from keyboard. Of course, you need to pop up menu first. There is no way to register ‘global’ shortcut for these methods. </p>
 
 <h3><a name="Configuration"></a>Configuration<a href="#Configuration" class="section_anchor"></a></h3>
-<p>Especially for Inside mode. Allows to set different font, palette and other settings for your <a href="ConEmu.html">ConEmu</a> instance. </p>
+<p>Especially for Inside mode. Allows to set different font, palette and other settings for your ConEmu instance. </p>
 
 <h3><a name="Command"></a>Command<a href="#Command" class="section_anchor"></a></h3>
 <p>Specify your shell here (cmd, powershell, Far Manager, etc.) </p>
