--- a/en/SettingsSizePos.html
+++ b/en/SettingsSizePos.html
@@ -25,8 +25,8 @@ redirect_from: /ru/SettingsSizePos.html
 
 <h2><a name="Window_position_(pixels)"></a>Window position (pixels)<a href="#Window_position_(pixels)" class="section_anchor"></a></h2>
 <ul><li><strong>Fixed</strong> </li>
-<li><strong>Cascade</strong> </li></ul><p><strong>X</strong> Upper left corner of <a href="ConEmu.html">ConEmu</a> in Normal mode This is in pixels </p>
-<p><strong>Y</strong> Upper left corner of <a href="ConEmu.html">ConEmu</a> in Normal mode This is in pixels </p>
+<li><strong>Cascade</strong> </li></ul><p><strong>X</strong> Upper left corner of ConEmu in Normal mode This is in pixels </p>
+<p><strong>Y</strong> Upper left corner of ConEmu in Normal mode This is in pixels </p>
 
 <h2><a name="Console_buffer_height"></a>Console buffer height<a href="#Console_buffer_height" class="section_anchor"></a></h2>
 <p><strong>Long console output</strong> Autoexpand bufferheight to specified number of lines, while Far executes console commands. Full console output (up to specified count of lines) will be available via Far macro (CtrlO.reg) </p>
@@ -37,10 +37,10 @@ redirect_from: /ru/SettingsSizePos.html
 <p>Old DOS programs may be runned under console sizes: 80x25, 80x28, 80x43 or 80x50. You may force window size selection, or left the automatic selection. This feature is not available in x64 OS. </p>
 
 <h2><a name="Alignment"></a>Alignment<a href="#Alignment" class="section_anchor"></a></h2>
-<p><strong>Center console in <a href="ConEmu.html">ConEmu</a> workspace</strong> Draw console content in center of <a href="ConEmu.html">ConEmu</a> window. Use together with ‘Pad size’ </p>
-<p><strong>Pad size</strong> Create pad between <a href="ConEmu.html">ConEmu</a> frame and console field </p>
-<p><strong>Align <a href="ConEmu.html">ConEmu</a> window size to cells</strong> <i>(pixels)</i>  </p>
-<p><strong>Snap to desktop edges</strong> Lock <a href="ConEmu.html">ConEmu</a> window inside desktop work area </p>
+<p><strong>Center console in ConEmu workspace</strong> Draw console content in center of ConEmu window. Use together with ‘Pad size’ </p>
+<p><strong>Pad size</strong> Create pad between ConEmu frame and console field </p>
+<p><strong>Align ConEmu window size to cells</strong> <i>(pixels)</i>  </p>
+<p><strong>Snap to desktop edges</strong> Lock ConEmu window inside desktop work area </p>
 
 <h2><a name="Window_size_(cells,_pixels_or_percents)"></a>Window size (cells, pixels or percents)<a href="#Window_size_(cells,_pixels_or_percents)" class="section_anchor"></a></h2>
 
