--- a/en/SettingsTabBar.html
+++ b/en/SettingsTabBar.html
@@ -16,7 +16,7 @@ redirect_from: /ru/SettingsTabBar.html
 <ul><li><strong>Always show</strong> </li>
 <li><strong>Auto show</strong> </li>
 <li><strong>Don&#x27;t show</strong> </li></ul><p><strong>Tabs on bottom</strong>  </p>
-<p><strong>Internal CtrlTab</strong> Handle CtrlTab and CtrlShiftTab internally (by <a href="ConEmu.html">ConEmu</a>). These keystrokes will not be sent to console window, but You can easily switch between consoles (panels). </p>
+<p><strong>Internal CtrlTab</strong> Handle CtrlTab and CtrlShiftTab internally (by ConEmu). These keystrokes will not be sent to console window, but You can easily switch between consoles (panels). </p>
 <p><strong>Lazy tab switch</strong> When checked - real window switching will be performed on Ctrl depress </p>
 <p><strong>Recent mode</strong> Switch first between recent tabs. You may still switch between tabs in standard manner using Left/Right (after CtrlTab), while Ctrl is still presses. </p>
 <p><strong>Hide disabled tabs</strong> Hide tabs, wich can&#x27;t be activated. E.g. hide Far Manager editors while executing cmd.exe </p>
