--- a/en/SolarizedColors.html
+++ b/en/SolarizedColors.html
@@ -21,7 +21,7 @@ git config --global color.status.updated &quot;green bold&quot;
 git config --global color.branch.current &quot;green bold&quot;</pre>
 
 <h2><a name="Use_modified_color_scheme"></a>Use modified color scheme<a href="#Use_modified_color_scheme" class="section_anchor"></a></h2>
-<p><a href="ConEmu.html">ConEmu</a> has several Solarized schemes. For example <code>&lt;Solarized Git&gt;</code> was optimized for vanilla <a href="http://msysgit.github.io/" rel="nofollow">MsysGit</a>, <code>&lt;Solarized (Luke Maciak)&gt;</code> has accented colors in lower octet, and so on. Just choose the desired scheme from dropdown list box. </p>
+<p>ConEmu has several Solarized schemes. For example <code>&lt;Solarized Git&gt;</code> was optimized for vanilla <a href="http://msysgit.github.io/" rel="nofollow">MsysGit</a>, <code>&lt;Solarized (Luke Maciak)&gt;</code> has accented colors in lower octet, and so on. Just choose the desired scheme from dropdown list box. </p>
 <p><img src="../img/Settings-Colors3.png" title="ConEmu: Settings' Colors"> </p>
 
 <!-- Content ends -->
