--- a/en/SshAgent.html
+++ b/en/SshAgent.html
@@ -4,7 +4,7 @@ redirect_from: /ru/SshAgent.html
 
 <!-- Content starts -->
 
-<p><a href="ConEmu.html">ConEmu</a>, cygwin/msys and ssh-agent </p>
+<p>ConEmu, cygwin/msys and ssh-agent </p>
 <p>Article is under construction </p>
 <p>This may be useful: <a href="https://twitter.com/rootpd/status/428600352229687296" rel="nofollow">Tweet #1</a>, <a href="http://superuser.com/a/230872/234747" rel="nofollow">superuser answer</a>, <a href="https://twitter.com/factormystic/status/428610122001432576" rel="nofollow">Tweet #2</a>, <a href="https://code.google.com/p/conemu-maximus5/wiki/ConEmuEnvironment#Export_variables" rel="nofollow">exporting environment</a>. </p>
 
