--- a/en/StableVsPreview.html
+++ b/en/StableVsPreview.html
@@ -9,17 +9,17 @@ redirect_from: /ru/StableVsPreview.html
 <p>Thought, it must be obvious, that if one don&#x27;t want new features <strong>and bugfixes</strong> - he may stuck on stable. But it is strange (for me) enough when user reports a bug which was fixed months ago... </p>
 
 <h2><a name="Stable"></a>Stable<a href="#Stable" class="section_anchor"></a></h2>
-<p>This is «Stable» version of <a href="ConEmu.html">ConEmu</a>. </p>
-<p>Please, don&#x27;t think that «Stable» is «totally bug-free», in the <a href="ConEmu.html">ConEmu</a> project some builds are marked as «Stable» when they are ready (in my opinion) for public. </p>
+<p>This is «Stable» version of ConEmu. </p>
+<p>Please, don&#x27;t think that «Stable» is «totally bug-free», in the ConEmu project some builds are marked as «Stable» when they are ready (in my opinion) for public. </p>
 <p>But! Bugfixes, patches, features will not be applied to «Stable» builds until next «Stable» comes! </p>
 <p>On the other hand, that means that «Stable» builds will not contains breaking changes, side by side with bugfixes and new features. </p>
 
 <h2><a name="Preview"></a>Preview<a href="#Preview" class="section_anchor"></a></h2>
-<p>This is «Preview» (also known as «Release Preview») version of <a href="ConEmu.html">ConEmu</a>. Most of latests bugfixes and features, but these builds comes with delay in comparison with «Developer» build. Trying to avoid creating new bugs :) </p>
+<p>This is «Preview» (also known as «Release Preview») version of ConEmu. Most of latests bugfixes and features, but these builds comes with delay in comparison with «Developer» build. Trying to avoid creating new bugs :) </p>
 <p><strong>Recommended</strong> for most users. </p>
 
 <h2><a name="Alpha"></a>Alpha<a href="#Alpha" class="section_anchor"></a></h2>
-<p>This is «Developer» (also known as «Alpha») version of <a href="ConEmu.html">ConEmu</a>. Latests bugfixes and features, but some builds may be unstable due to changes in the code. </p>
+<p>This is «Developer» (also known as «Alpha») version of ConEmu. Latests bugfixes and features, but some builds may be unstable due to changes in the code. </p>
 <p>However, most of these builds are suitable for most users. </p>
 
 <!-- Content ends -->
