--- a/en/TccInsertOverwrite.html
+++ b/en/TccInsertOverwrite.html
@@ -7,7 +7,7 @@ redirect_from: /ru/TccInsertOverwrite.html
 <!--
 <i>Change tcc prompt to insert mode by default</i>
 -->
-<p>From time to time any user complains that <a href="ConEmu.html">ConEmu</a> starts tcc (tcc/le) prompt in ‘Overwrite’ mode. But that is not a <a href="ConEmu.html">ConEmu</a> responsibility (check it with <code>cmd.exe</code> as a shell). You need to configure your tcc properly. </p>
+<p>From time to time any user complains that ConEmu starts tcc (tcc/le) prompt in ‘Overwrite’ mode. But that is not a ConEmu responsibility (check it with <code>cmd.exe</code> as a shell). You need to configure your tcc properly. </p>
 <p>Just run from yours tcc prompt: </p>
 <pre class="prettyprint">OPTION</pre>
 <p>And choose desired mode on the ‘Command Line’ tab. Do not forget to press ‘OK’ button ;) </p>
