--- a/en/VirtualConsole.html
+++ b/en/VirtualConsole.html
@@ -4,6 +4,6 @@ redirect_from: /ru/VirtualConsole.html
 
 <!-- Content starts -->
 
-<p>In turn to <a href="RealConsole.html">RealConsole</a>, ‘Virtual console’ is just a part of <a href="ConEmu.html">ConEmu</a> window where ConEmu draw the contents of your terminal. </p>
+<p>In turn to <a href="RealConsole.html">RealConsole</a>, ‘Virtual console’ is just a part of ConEmu window where ConEmu draw the contents of your terminal. </p>
 
 <!-- Content ends -->
