--- a/en/CheckUnicode.html
+++ b/en/CheckUnicode.html
@@ -12,7 +12,7 @@ redirect_from: /ru/CheckUnicode.html
 <h1 id="h0"><a name="UTF-8"></a>UTF-8<a href="#UTF-8" class="section_anchor"></a></h1>
 <p>On Windows, unlike Unix, the console itself is not a stream of ‘bytes’ but a spreadsheet of cells, each of which contains an UTF-16 character and a color attribute. </p>
 <p>That means if your application produces output using single-byte or multi-byte character sets (which are ANSI, OEM, UTF-8 and many others) the Windows converts that output to UTF-16 automatically regarding active codepage selected in your console (use &quot;chcp&quot; command to check it). </p>
-<p>If you want to work with UTF-8 encoding you have to select UTF-8 as active console codepage. Just use &quot;chcp 65001&quot; command to do that. You may call this command from your shell prompt or run it before shell in a <a href="ConEmu.html">ConEmu</a> task content. Of course your application must be able to output data using UTF-8. Refer to your application manual. </p>
+<p>If you want to work with UTF-8 encoding you have to select UTF-8 as active console codepage. Just use &quot;chcp 65001&quot; command to do that. You may call this command from your shell prompt or run it before shell in a ConEmu task content. Of course your application must be able to output data using UTF-8. Refer to your application manual. </p>
 <pre class="prettyprint">chcp 65001 &amp; cmd</pre>
 
 <h1><a name="On-the-fly_conversion"></a>On-the-fly conversion<a href="#On-the-fly_conversion" class="section_anchor"></a></h1>
