--- a/en/CygwinMsys.html
+++ b/en/CygwinMsys.html
@@ -10,13 +10,13 @@ redirect_from: /ru/CygwinMsys.html
 
 <h1 id="h0"><a name="Abstract"></a>Abstract<a href="#Abstract" class="section_anchor"></a></h1>
 <p>Report cygwin and msys bugs to their <a href="http://dir.gmane.org/gmane.os.cygwin" rel="nofollow">authors</a>! </p>
-<p><a href="ConEmu.html">ConEmu</a> is terminal! It just the display for output of console applications. Bugs in applications will lead wrong display output in <a href="ConEmu.html">ConEmu</a>. Of course. </p>
-<p>Still thinking the problem is inside <a href="ConEmu.html">ConEmu</a>? Read the rest of this wiki. </p>
+<p>ConEmu is terminal! It just the display for output of console applications. Bugs in applications will lead wrong display output in ConEmu. Of course. </p>
+<p>Still thinking the problem is inside ConEmu? Read the rest of this wiki. </p>
 
 <h1><a name="Some_techinfo_first"></a>Some techinfo first<a href="#Some_techinfo_first" class="section_anchor"></a></h1>
 <p>There are two types of Windows console (terminal) emulators: </p>
 <ol><li>Based on stdin/stdout redirection. Most known - <a href="https://code.google.com/p/mintty/" rel="nofollow">mintty</a>, <a href="https://code.google.com/p/puttycyg/" rel="nofollow">puttycyg</a>, <a href="https://sourceforge.net/projects/poderosa/" rel="nofollow">Poderosa&#x27;s cygterm</a>. </li>
-<li>Based on Windows console API. Most known - <a href="ConEmu.html">ConEmu</a>, <a href="https://sourceforge.net/projects/console/" rel="nofollow">Console</a>, <a href="http://jpsoft.com/" rel="nofollow">Take Command</a>. </li></ol>
+<li>Based on Windows console API. Most known - ConEmu, <a href="https://sourceforge.net/projects/console/" rel="nofollow">Console</a>, <a href="http://jpsoft.com/" rel="nofollow">Take Command</a>. </li></ol>
 
 <h1><a name="stdin/stdout_redirection_style"></a>stdin/stdout redirection style<a href="#stdin/stdout_redirection_style" class="section_anchor"></a></h1>
 <p>Most of this type emulators are based on ‘POSIX layer’ - <a href="http://cygwin.com/" rel="nofollow">cygwin</a>, <a href="http://www.mingw.org/wiki/MSYS" rel="nofollow">msys</a> or <a href="http://msysgit.github.io/" rel="nofollow">msysgit</a>. AFAIK, msys was forked long ago from cygwin, that is why they are alike in many cases. In turn, there is another fork - msysgit was forked from msys... </p>
@@ -34,7 +34,7 @@ redirect_from: /ru/CygwinMsys.html
 <p>On the other hand, programs designed for ‘POSIX layer’ may fails here or there... </p>
 
 <h2><a name="Complains"></a>Complains<a href="#Complains" class="section_anchor"></a></h2>
-<p>I regularly get emails and issues about cygwin/msys compatibility with <a href="ConEmu.html">ConEmu</a>. Most of them does not have anything to fix inside <a href="ConEmu.html">ConEmu</a> sources, but users complain me instead of cygwin/msys developers. </p>
+<p>I regularly get emails and issues about cygwin/msys compatibility with ConEmu. Most of them does not have anything to fix inside ConEmu sources, but users complain me instead of cygwin/msys developers. </p>
 <p>Let me draw an analogue. There is a great tool RPP, but it is an MacOS application. How can you run it on Windows? Set up VMWare with MacOS inside :-D </p>
 <p>The same with POSIX console applications in Windows. If you want to run them properly - run them in mintty. That is weird for my taste... If you develop Windows console application, it must be able to run in Windows standard console window. Well, it may show some lack of features (like 256 colors processing) but it must be working properly in all other cases. </p>
 
@@ -44,13 +44,13 @@ redirect_from: /ru/CygwinMsys.html
 
 <h1><a name="Problems_with_cygwin"></a>Problems with cygwin<a href="#Problems_with_cygwin" class="section_anchor"></a></h1>
 <p>Before reporting cygwin-related problem to me, please check it first in the standard Windows console. Just run your shell from <code>Win+R</code>, for example <code>C:\cygwin\bin\sh.exe -l -i</code>, ensure your console window has the same buffer and window sizes (right click on the console caption, choose ‘Properties’ and change sizes), and try to reproduce your problem. </p>
-<p>I believe, your problem will repeats in standard Windows console (many users erroneously call it ‘cmd.exe’). At the moment, only one reported bug really relates to <a href="ConEmu.html">ConEmu</a>: <a title="Alternative screen and clearing screen (Ctrl+L)" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1549">Issue 1549&nbsp;</a> (clearing screen with <code>Ctrl+L</code>). </p>
-<p>But in most of cases, your problem will repeats outside of <a href="ConEmu.html">ConEmu</a>. That means, you should contact cygwin team, because ‘console application must work properly in the console’. But in your case, cygwin acts properly only under certain terminal emulators (mintty), which are not real consoles in fact. </p>
+<p>I believe, your problem will repeats in standard Windows console (many users erroneously call it ‘cmd.exe’). At the moment, only one reported bug really relates to ConEmu: <a title="Alternative screen and clearing screen (Ctrl+L)" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1549">Issue 1549&nbsp;</a> (clearing screen with <code>Ctrl+L</code>). </p>
+<p>But in most of cases, your problem will repeats outside of ConEmu. That means, you should contact cygwin team, because ‘console application must work properly in the console’. But in your case, cygwin acts properly only under certain terminal emulators (mintty), which are not real consoles in fact. </p>
 
 <h1><a name="Report_examples"></a>Report examples<a href="#Report_examples" class="section_anchor"></a></h1>
 
 <h2><a name="Broken_screen_output"></a>Broken screen output<a href="#Broken_screen_output" class="section_anchor"></a></h2>
-<p>Was happen with alternative screens. There was several bugs related and they was fixed in cygwin. As I said, nothing to do with <a href="ConEmu.html">ConEmu</a>, just ask cygwin team to make it work in Windows console. Seems like reported problems of that class are already fixed within <a href="http://cygwin.com/snapshots/" rel="nofollow">cygwin</a>. </p>
+<p>Was happen with alternative screens. There was several bugs related and they was fixed in cygwin. As I said, nothing to do with ConEmu, just ask cygwin team to make it work in Windows console. Seems like reported problems of that class are already fixed within <a href="http://cygwin.com/snapshots/" rel="nofollow">cygwin</a>. </p>
 <p>Some related issues: <a title="Clearing buffer after quiting VIM, LESS, MAN etc. in Cygwin" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1397">Issue 1397&nbsp;</a>, <a title="screen is wiped out after quiting vi" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1537">Issue 1537&nbsp;</a> </p>
 
 <h2><a name="Mouse_do_not_working"></a>Mouse do not working<a href="#Mouse_do_not_working" class="section_anchor"></a></h2>
@@ -59,8 +59,8 @@ redirect_from: /ru/CygwinMsys.html
 <p>Some related issues: <a title="Mouse doesn't work in cygwin bash" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=943">Issue 943&nbsp;</a>, <a title="nix-style mouse processing" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1492">Issue 1492&nbsp;</a>, <a title="Using mouse with cygwin/msys applications"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1497">Issue 1497</a>, <a href="http://thread.gmane.org/gmane.os.cygwin/146090/focus=146133" rel="nofollow">gmane thread</a>. </p>
 
 <h2><a name="ANSI_support"></a>ANSI support<a href="#ANSI_support" class="section_anchor"></a></h2>
-<p>One may notice that colors in the mintty are &quot;nice&quot; but in the <a href="ConEmu.html">ConEmu</a> are &quot;ugly&quot;. That is because cygwin (ncurses actually, thought) does not send escape sequences to the terminal output but process them internally. </p>
-<p>Cygwin does not want to know anything about <a href="ConEmu.html">ConEmu</a>. I can understand this point of view. </p>
+<p>One may notice that colors in the mintty are &quot;nice&quot; but in the ConEmu are &quot;ugly&quot;. That is because cygwin (ncurses actually, thought) does not send escape sequences to the terminal output but process them internally. </p>
+<p>Cygwin does not want to know anything about ConEmu. I can understand this point of view. </p>
 <p>Read more in wiki <a href="CygwinAnsi.html">CygwinAnsi</a>. </p>
 
 <h2><a name="Startup_directory"></a>Startup directory<a href="#Startup_directory" class="section_anchor"></a></h2>
