--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -12,7 +12,7 @@ redirect_from: /ru/DefaultTerminal.html
 
 <h1 id="h0"><a name="Introduction"></a>Introduction<a href="#Introduction" class="section_anchor"></a></h1>
 <p>In fact, Windows does not provide official way to change default terminal application. That is because console subsystem is a part of Windows kernel (<code>csrss.exe</code> up to Vista and <code>conhost.exe</code> in Windows 7 and higher). </p>
-<p>Only use of hacking methods can ‘change’ default Windows terminal application. And <a href="ConEmu.html">ConEmu</a> can do it! </p>
+<p>Only use of hacking methods can ‘change’ default Windows terminal application. And ConEmu can do it! </p>
 <p><strong>WARNING</strong>! Enabling ‘Default terminal’ feature may cause false alarms in some antiviral programs! </p>
 
 <h2><a name="Inspired_by_questions"></a>Inspired by questions<a href="#Inspired_by_questions" class="section_anchor"></a></h2>
@@ -28,15 +28,15 @@ redirect_from: /ru/DefaultTerminal.html
 <p>Just turn on checkbox ‘Force ConEmu as default terminal for console applications’, optionally turn on checkbox ‘Register on OS startup’ and point ‘parent’ applications from you like to start console tools (for example <code>explorer.exe|devenv.exe|totalcmd.exe</code>) and voila. You may press <strong>Win</strong>+<strong>R</strong> type <code>ipconfig /all</code> and press <strong>Enter</strong>. It will starts in the new ConEmu tab. </p>
 <p>When you run console application from specified ‘parent’ application, your console application will be started in the new ConEmu tab. </p>
 <p>The only exception - consoles started ‘As administrator’ can&#x27;t be hooked yet. </p>
-<p><strong>Note</strong>! To ensure that your console application will be seized, run <a href="ConEmu.html">ConEmu</a> <strong>before</strong> starting your consoles or debugging processes (from Visual Studio for example). However, that may be not required if you choose ‘Register on OS startup’. But in fact, ‘registering’ will affect, in most cases, only <code>explorer.exe</code> ‘parent’ process. So, recommendation is ‘run <a href="ConEmu.html">ConEmu</a> before...’ </p>
+<p><strong>Note</strong>! To ensure that your console application will be seized, run ConEmu <strong>before</strong> starting your consoles or debugging processes (from Visual Studio for example). However, that may be not required if you choose ‘Register on OS startup’. But in fact, ‘registering’ will affect, in most cases, only <code>explorer.exe</code> ‘parent’ process. So, recommendation is ‘run ConEmu before...’ </p>
 <p>‘<a href="SettingsDefTerm.html">Default terminal</a>’ feature is more powerful than ‘Automatic attach of cmd’ (‘<a href="SettingsComspec.html">ComSpec</a>’ page). ‘Default terminal’ can seize starting of <strong>any</strong> console program, not only cmd.exe. For example, you may dblclick on <code>ipconfig.exe</code> in Total Commander panel and voila... Also there will be no flickering of real console window. </p>
 <p>Settings page wiki: <a href="DefaultTerminal.html">Default term</a>. </p>
 
 <h1><a name="Tech_info"></a>Tech info<a href="#Tech_info" class="section_anchor"></a></h1>
 <p>The only real way to ‘change’ default Windows terminal: </p>
 <ul><li>Hide <a href="RealConsole.html">RealConsole</a> when your console application is to be started; </li>
-<li>Run new <a href="ConEmu.html">ConEmu</a> window if no one instance was running before; </li>
-<li>Attach started console application into <a href="ConEmu.html">ConEmu</a> instance. </li></ul><p>Looks simple, right? But who can perform these actions? </p>
+<li>Run new ConEmu window if no one instance was running before; </li>
+<li>Attach started console application into ConEmu instance. </li></ul><p>Looks simple, right? But who can perform these actions? </p>
 
 <h2><a name="Hooks_must_be_installed"></a>Hooks must be installed<a href="#Hooks_must_be_installed" class="section_anchor"></a></h2>
 <p><a href="ConEmuHk.html">ConEmuHk</a> (<code>ConEmuHk.dll</code> or <code>ConEmuHk64.dll</code>) must be loaded into process space of ‘parent’ application <strong>from</strong> which you are starting new console application: Explorer (explorer.exe), Task manager (taskmgr.exe), Visual Studio (devenv.exe or WDExpress.exe), and so on... </p>
@@ -45,9 +45,9 @@ redirect_from: /ru/DefaultTerminal.html
 
 <h2><a name="Normal_console_application_startup"></a>Normal console application startup<a href="#Normal_console_application_startup" class="section_anchor"></a></h2>
 <p>To avoid flickering of <a href="RealConsole.html">RealConsole</a> window <a href="ConEmuHk.html">ConEmuHk</a> will change command line. </p>
-<p>When you run &quot;cmd&quot; from <strong>Win</strong>+<strong>R</strong> and no <a href="ConEmu.html">ConEmu</a> instance was runned: </p>
+<p>When you run &quot;cmd&quot; from <strong>Win</strong>+<strong>R</strong> and no ConEmu instance was runned: </p>
 <pre class="prettyprint">ConEmu.exe /single /cmd -new_console:n &quot;C:\Windows\system32\cmd.exe&quot; </pre>
-<p>And when <a href="ConEmu.html">ConEmu</a> window already exists: </p>
+<p>And when ConEmu window already exists: </p>
 <pre class="prettyprint">ConEmuC64.exe [many internal switched] /HIDE /NOCONFIRM /ROOT &quot;C:\Windows\system32\cmd.exe&quot; </pre>
 <p>That is safe because ‘parent’ does not really need to get started process handle (<code>cmd.exe</code> in example). </p>
 
