--- a/en/FaqBoldItalic.html
+++ b/en/FaqBoldItalic.html
@@ -7,11 +7,11 @@ redirect_from: /ru/FaqBoldItalic.html
 <!--
 <i>How to display bold/italic/underlined text in the console</i>
 -->
-<p><a href="ConEmu.html">ConEmu</a> provides full-featured support of Windows console functions. That means you may run here any console applications designed for <a href="WinApi.html">WinApi</a>. On the other hand, Windows console does not provide official way to print bold/italic/underlined text. </p>
-<p>However, when you are using <a href="ConEmu.html">ConEmu</a> you may use them. Here are some tricks. </p>
+<p>ConEmu provides full-featured support of Windows console functions. That means you may run here any console applications designed for <a href="WinApi.html">WinApi</a>. On the other hand, Windows console does not provide official way to print bold/italic/underlined text. </p>
+<p>However, when you are using ConEmu you may use them. Here are some tricks. </p>
 
 <h1 id="h0"><a name="Extend_fonts_feature"></a>Extend fonts feature<a href="#Extend_fonts_feature" class="section_anchor"></a></h1>
-<p>You may choose two background color indexes to force <a href="ConEmu.html">ConEmu</a> to draw text using bold/italic outline. </p>
+<p>You may choose two background color indexes to force ConEmu to draw text using bold/italic outline. </p>
 <p>When you turn the feature <strong>On</strong> on the ‘Main’ page, by default, ‘Light red’ background will be replaced with bold outlined text, and ‘Magenta’ background will be replaced with italic outlined text. </p>
 <p>Example for ‘cmd.exe’ prompt: bold ‘path’ followed by italic ‘time’ and normal ‘&gt;’. </p>
 <pre class="prettyprint">prompt $E[37;4;41m$P$E[m$S$E[37;4;45m$T$E[m$G</pre>
@@ -20,7 +20,7 @@ redirect_from: /ru/FaqBoldItalic.html
 <p><strong>Bold and italic in cmd prompt</strong><br> <img src="../img/ConEmuExtFonts2.png" title="ConEmu Settings: Bold and italic in cmd prompt"> </p>
 
 <h1><a name="Xterm-256_emulation"></a>Xterm-256 emulation<a href="#Xterm-256_emulation" class="section_anchor"></a></h1>
-<p>Another way is using xterm-256 ANSI sequences. For now, <a href="ConEmu.html">ConEmu</a> provides limited support for that feature, extended codes are processed in the bottom of the scroll buffer only. When you lines goes up - extended attributes will be lost. How to put your prompt at the bottom described here: <a href="PromptAtTheBottom.html">PromptAtTheBottom</a>. </p>
+<p>Another way is using xterm-256 ANSI sequences. For now, ConEmu provides limited support for that feature, extended codes are processed in the bottom of the scroll buffer only. When you lines goes up - extended attributes will be lost. How to put your prompt at the bottom described here: <a href="PromptAtTheBottom.html">PromptAtTheBottom</a>. </p>
 <p>Anyway, if you choose <a href="AnsiEscapeCodes.html">SGR 38 or 48</a> you may use bold/italic/underlined after them. </p>
 <pre class="prettyprint">prompt $E[9999E$E[48;5;0m$E[38;5;7m$E[1m$P$E[m$S$E[48;5;0m$E[38;5;7m$E[4m$D$E[m$S$E[48;5;0m$E[38;5;7m$E[3m$T$E[m$g</pre>
 <p><strong>Bold/italic/underlined in cmd prompt</strong><br> <img src="../img/ConEmuExtFonts3.png" title="ConEmu Settings: Bold, italic and underlined in cmd prompt"> </p>
