--- a/en/FaqPlainShell.html
+++ b/en/FaqPlainShell.html
@@ -8,7 +8,7 @@ redirect_from: /ru/FaqPlainShell.html
 <i>Run your shell naked</i>
 -->
 <p>In some cases third party software or plugins may affect normal behaviour of your shell. And that may be <strong>not</strong> a ConEmu issue at all. </p>
-<p>Most of shells have switches to disable loading plugins or extensions. Just use them. Easiest way to use &quot;<a href="ConEmu.html">ConEmu</a> /cmd ...&quot; to force proper shell command. For example: </p>
+<p>Most of shells have switches to disable loading plugins or extensions. Just use them. Easiest way to use &quot;ConEmu /cmd ...&quot; to force proper shell command. For example: </p>
 <pre class="prettyprint">ConEmu /cmd PowerShell -noprofile</pre>
 <p>Alternatively, you may change the ‘Command line’ on the ‘Startup’ settings page. </p>
 
