--- a/en/RealConsole.html
+++ b/en/RealConsole.html
@@ -4,9 +4,9 @@ redirect_from: /ru/RealConsole.html
 
 <!-- Content starts -->
 
-<p><a href="ConEmu.html">ConEmu</a> always run standard Windows console - ‘Real console’, but it is hidden most of time. </p>
+<p>ConEmu always run standard Windows console - ‘Real console’, but it is hidden most of time. </p>
 <p>Many users erroneously name it as <code>cmd.exe</code>, but it is not true. Windows console window is a part of Windows kernel (<code>csrss.exe</code> up to Vista and <code>conhost.exe</code> in Windows 7 and higher). And you may run there console applications: <code>cmd.exe</code>, <code>powershell.exe</code> and many others are shells and tools. </p>
-<p>If you need to take a look at ‘Real console’ just press (simultaneously) in the <a href="ConEmu.html">ConEmu</a> window ‘Ctrl+Win+Alt+Space’. Alternatively - <a href="SystemMenu.html">SystemMenu</a> -&gt; Debug -&gt; Real console. </p>
-<p>Sometimes you may see flickering ‘Real console’ during <a href="ConEmu.html">ConEmu</a> tab startup. That is intended behavior for ‘Run as administrator’ and debugging using <a href="DefaultTerminal.html">Default terminal</a> feature. </p>
+<p>If you need to take a look at ‘Real console’ just press (simultaneously) in the ConEmu window ‘Ctrl+Win+Alt+Space’. Alternatively - <a href="SystemMenu.html">SystemMenu</a> -&gt; Debug -&gt; Real console. </p>
+<p>Sometimes you may see flickering ‘Real console’ during ConEmu tab startup. That is intended behavior for ‘Run as administrator’ and debugging using <a href="DefaultTerminal.html">Default terminal</a> feature. </p>
 
 <!-- Content ends -->
