--- a/en/SettingsDebug.html
+++ b/en/SettingsDebug.html
@@ -18,8 +18,8 @@ redirect_from: /ru/SettingsDebug.html
 <ul><li><strong>Disabled</strong> Disable debug logging. This implies on ‘Settings’ dialog close. </li>
 <li><strong>Shell</strong> Log shell calls (progress creations, library loadings, etc.) ‘Inject <a href="ConEmuHk.html">ConEmuHk</a>’ is required </li>
 <li><strong>Input</strong> Log keyboard and mouse activities </li>
-<li><strong>Cmd</strong> Log internal <a href="ConEmu.html">ConEmu</a> (GUI<code>&lt;</code>--<code>&gt;</code>Server) calls </li>
+<li><strong>Cmd</strong> Log internal ConEmu (GUI<code>&lt;</code>--<code>&gt;</code>Server) calls </li>
 <li><strong>Ansi</strong> </li>
-<li><strong>Debug</strong> Automatically attach <a href="ConEmu.html">ConEmu</a> debugger to all started processes </li></ul>
+<li><strong>Debug</strong> Automatically attach ConEmu debugger to all started processes </li></ul>
 
 <!-- Content ends -->
