--- a/en/SettingsDefTerm.html
+++ b/en/SettingsDefTerm.html
@@ -14,12 +14,12 @@ redirect_from: /ru/SettingsDefTerm.html
 <p>Read more about <a href="DefaultTerminal.html">Default terminal feature</a>. </p>
 
 <h2><a name="WARNING!!!_Enabling_this_option_may_cause_false_alarms_in_antivi"></a>WARNING!!! Enabling this option may cause false alarms in antiviral programs!!!<a href="#WARNING!!!_Enabling_this_option_may_cause_false_alarms_in_antivi" class="section_anchor"></a></h2>
-<p><strong>Force <a href="ConEmu.html">ConEmu</a> as default terminal for console applications</strong>  </p>
+<p><strong>Force ConEmu as default terminal for console applications</strong>  </p>
 <p><strong>Register on OS startup</strong>  </p>
 <p><strong>Leave in TSA</strong>  </p>
 <p><strong>List of hooked executables delimited with &quot;|&quot; (e.g. &quot;explorer.exe|devenv.exe|totalcmd.exe&quot;)</strong>  </p>
 <p><strong>Don&#x27;t use <a href="ConEmuHk.html">ConEmuHk</a>.dll in started console</strong>  </p>
-<p><strong>Use existing <a href="ConEmu.html">ConEmu</a> window if available</strong>  </p>
+<p><strong>Use existing ConEmu window if available</strong>  </p>
 
 <h2><a name="Confirm_close_(Press_Enter_or_Esc_to_close_console)"></a>Confirm close (Press Enter or Esc to close console)<a href="#Confirm_close_(Press_Enter_or_Esc_to_close_console)" class="section_anchor"></a></h2>
 <ul><li><strong>Automatic</strong> </li>
