--- a/en/SettingsFeatures.html
+++ b/en/SettingsFeatures.html
@@ -16,19 +16,19 @@ redirect_from: /ru/SettingsFeatures.html
 <p><strong>Auto register fonts</strong> Search, register for process, and use first <code>*</code>.ttf file in conemu folder </p>
 <p><strong>Monitor console lang</strong> Monitor input language change in real console (e.g. Far Manager XLat switching support) </p>
 <p><strong>Show real console</strong> Show real console on startup </p>
-<p><strong>Debug steps in caption</strong> Show some debug information in <a href="ConEmu.html">ConEmu</a> title E.g. plugin communication steps. </p>
-<p><strong>Sleep in background</strong> Reduce FPS when <a href="ConEmu.html">ConEmu</a> loose focus </p>
-<p><strong>Focus in child windows</strong> Set focus in xshell/putty/notepad/etc. when <a href="ConEmu.html">ConEmu</a> is activated or tab switched. </p>
-<p><strong>Show ‘was hidden’ warning</strong> Show ‘<a href="ConEmu.html">ConEmu</a> was hidden from some program’ message in TSA </p>
-<p><strong>Retard inactive panes</strong> Retard inactive but visible split-panes in the active <a href="ConEmu.html">ConEmu</a> window </p>
+<p><strong>Debug steps in caption</strong> Show some debug information in ConEmu title E.g. plugin communication steps. </p>
+<p><strong>Sleep in background</strong> Reduce FPS when ConEmu loose focus </p>
+<p><strong>Focus in child windows</strong> Set focus in xshell/putty/notepad/etc. when ConEmu is activated or tab switched. </p>
+<p><strong>Show ‘was hidden’ warning</strong> Show ‘ConEmu was hidden from some program’ message in TSA </p>
+<p><strong>Retard inactive panes</strong> Retard inactive but visible split-panes in the active ConEmu window </p>
 <p><strong>Disable all flashing</strong> Disable all flashing (from consoles) on Windows taskbar. 3rd-state - allow short flashing. </p>
 
 <h2><a name="In-console_options"></a>In-console options<a href="#In-console_options" class="section_anchor"></a></h2>
-<p><strong>Inject <a href="ConEmuHk.html">ConEmuHk</a></strong> Allow injecting <a href="ConEmuHk.html">ConEmuHk</a>.dll in every process of <a href="ConEmu.html">ConEmu</a> console window. Required for many features (ANSI X3.64, -new_console argument, GUI apps in <a href="ConEmu.html">ConEmu</a> tabs, ...) and elimination of several problems (telnet in Windows 7, dialogs and menus behind of <a href="ConEmu.html">ConEmu</a> window, chcp hungs, and so on...) </p>
+<p><strong>Inject <a href="ConEmuHk.html">ConEmuHk</a></strong> Allow injecting <a href="ConEmuHk.html">ConEmuHk</a>.dll in every process of ConEmu console window. Required for many features (ANSI X3.64, -new_console argument, GUI apps in ConEmu tabs, ...) and elimination of several problems (telnet in Windows 7, dialogs and menus behind of ConEmu window, chcp hungs, and so on...) </p>
 <p><strong><a href="DosBox.html">DosBox</a> (DOS apps)</strong> Enables <a href="DosBox.html">DosBox</a> integration </p>
 <p><strong>Use Clink in prompt</strong> Use clink to extend command prompt (cmd.exe) <a href="http://code.google.com/p/clink/" rel="nofollow">http://code.google.com/p/clink/</a> </p>
 <p><strong>ANSI X3.64 / xterm 256 colors</strong> Enable processing of ANSI escape sequences, ‘Inject <a href="ConEmuHk.html">ConEmuHk</a>’ must be checked if you want to work with second level processes (e.g. cmd.exe -<code>&gt;</code> app.exe) </p>
-<p><strong>Process &#x27;-new_console&#x27; and &#x27;-cur_console&#x27; switches</strong> Enable processing of &#x27;-new_console&#x27; and &#x27;-cur_console&#x27; switches in your shell prompt, scripts etc. started in <a href="ConEmu.html">ConEmu</a> tabs </p>
+<p><strong>Process &#x27;-new_console&#x27; and &#x27;-cur_console&#x27; switches</strong> Enable processing of &#x27;-new_console&#x27; and &#x27;-cur_console&#x27; switches in your shell prompt, scripts etc. started in ConEmu tabs </p>
 <p><strong>Exception handler (debug)</strong>  </p>
 <p><strong>Portable registry</strong> Enable portable mode for Far manager </p>
 <p><strong>Suppress bells</strong> Stop annoying bells produced by echoing char(7) to console, Inject <a href="ConEmuHk.html">ConEmuHk</a> is required </p>
