--- a/en/SettingsTasks.html
+++ b/en/SettingsTasks.html
@@ -13,10 +13,10 @@ redirect_from: /ru/SettingsTasks.html
 <p><img src="../img/Settings-Tasks.png" title="ConEmu Settings: Tasks"> </p>
 
 <h2><a name="Predefined_tasks_(command_groups)"></a>Predefined tasks (command groups)<a href="#Predefined_tasks_(command_groups)" class="section_anchor"></a></h2>
-<p>Task name (alias), surrounded by {...}, used in ‘[+] menu’, ‘Recreate dialog’ or ‘/cmd’ agrument of <a href="ConEmu.html">ConEmu</a>.exe </p>
-<p><strong>Hotkey</strong> Choose hotkey for creating this task (not global, it works in <a href="ConEmu.html">ConEmu</a> only) </p>
+<p>Task name (alias), surrounded by {...}, used in ‘[+] menu’, ‘Recreate dialog’ or ‘/cmd’ agrument of ConEmu.exe </p>
+<p><strong>Hotkey</strong> Choose hotkey for creating this task (not global, it works in ConEmu only) </p>
 <p><strong>Task parameters. Example: /dir &quot;C:\&quot; /icon &quot;cmd.exe&quot; /single</strong> Task parameters (‘/dir’, ‘/icon’) Example: /dir &quot;C:\&quot; /icon &quot;cmd.exe&quot; /single </p>
-<p><strong>Commands (application, arguments, &quot;-new_console&quot; params) Delimit commands with empty lines Each command creates tab in <a href="ConEmu.html">ConEmu</a> when group started Mark active console tab with &#x27;<code>&gt;</code>&#x27; sign Start console &#x27;As Administrator&#x27; with &#x27;<code>*</code>&#x27; sign</strong>  </p>
+<p><strong>Commands (application, arguments, &quot;-new_console&quot; params) Delimit commands with empty lines Each command creates tab in ConEmu when group started Mark active console tab with &#x27;<code>&gt;</code>&#x27; sign Start console &#x27;As Administrator&#x27; with &#x27;<code>*</code>&#x27; sign</strong>  </p>
 <p>Commands (application, arguments, ‘-new_console’) Delimit commands with empty lines Each command creates tab or pane on group start Mark active console tab with &#x27;<code>&gt;</code>&#x27; sign Start console &#x27;As Admin&#x27; with &#x27;<code>*</code>&#x27; sign </p>
 <p><strong>Add default tasks...</strong>  </p>
 <p><strong>Reload...</strong>  </p>
