--- a/en/TaskBarBug.html
+++ b/en/TaskBarBug.html
@@ -13,7 +13,7 @@ redirect_from: /ru/TaskBarBug.html
 <p>Sometimes Windows explorer fails to reuse pinned icon. ConEmu can&#x27;t do anything with that, absolutely. This is internal feature of Microsoft, any application can&#x27;t tell to taskbar to ‘reuse’ icon, taskbar decides ‘to do or not to do’ itself. </p>
 <p>Usual reasons for failing icon reuse are: </p>
 <ul><li>User pin different executable than actually running. For example, pinned application is ‘...\KiTTYPortable.exe’, but actually running is ‘...\App\KiTTY\kitty_portable.exe’. That is not a ConEmu issue usually, user can (and must) pin ‘ConEmu.exe’ itself. </li>
-<li>Bug in the Windows Explorer. Application can&#x27;t do anything with that. </li></ul><p>User may try to bypass reuse bug. How? There is no strict instructions. Try to un-pin and re-pin again. Try to logoff/logon. Try to run <a href="ConEmu.html">ConEmu</a> from pinned icon, and when taskbar fails to reuse the icon, pin appeared new icon, and after that un-pin old icon. Contact Microsoft support? </p>
+<li>Bug in the Windows Explorer. Application can&#x27;t do anything with that. </li></ul><p>User may try to bypass reuse bug. How? There is no strict instructions. Try to un-pin and re-pin again. Try to logoff/logon. Try to run ConEmu from pinned icon, and when taskbar fails to reuse the icon, pin appeared new icon, and after that un-pin old icon. Contact Microsoft support? </p>
 <p>At last, pinned shortcut list can&#x27;t be managed externally, but I believe they are located here: <code>%USERPROFILE%\AppData\Roaming\Microsoft\Internet Explorer\Quick Launch\User Pinned\TaskBar</code>. </p>
 
 <!-- Content ends -->
