--- a/en/WindowsEnvironment.html
+++ b/en/WindowsEnvironment.html
@@ -4,8 +4,8 @@ redirect_from: /ru/WindowsEnvironment.html
 
 <!-- Content starts -->
 
-<p>With several exceptions defined in <a href="ConEmuEnvironment.html">ConEmuEnvironment</a> wiki, <a href="ConEmu.html">ConEmu</a> inherent all variables from calling process (which is explorer.exe in most cases). </p>
-<p><a href="ConEmu.html">ConEmu</a> does not change variables with exception of %PATH% (configurable on &quot;ComSpec&quot; settings page) and all %<a href="ConEmu.html">ConEmu</a>...% variables. </p>
+<p>With several exceptions defined in <a href="ConEmuEnvironment.html">ConEmuEnvironment</a> wiki, ConEmu inherent all variables from calling process (which is explorer.exe in most cases). </p>
+<p>ConEmu does not change variables with exception of %PATH% (configurable on &quot;ComSpec&quot; settings page) and all %ConEmu...% variables. </p>
 <p><strong>All</strong> other variables are left intact! </p>
 <p>That means, if you notice some strange in your environment - find problems on your side. </p>
 <p>Some common problems described below. </p>
